Submit btn and file choose field fix.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <main>
-    <form action="javascript:" class="reg-form">
+    <form action="" class="reg-form">
 
       <h1>Create an Account</h1>
 
@@ -62,7 +62,7 @@
         <input type="text" id="city" name="city" class="city-input" required>
       </label>
 
-      <button type="submit" class="sign-up">Sign Up</button>
+      <input type="submit" class="sign-up" value="Sign Up">
 
       <p class="terms">
         By clicking the 'Sign Up' button, you confirm that you accept our .
