--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
 
       <img src="images/profile-photo.png" alt="Profile Photo" class="profile-photo">
 
-      <label for="profile-photo" class="profile-photo-label">
+      <label class="profile-photo-label">
         <input type="file" hidden>
         <input type="text" placeholder="Upload photo" id="input-locked"> <br>
         <span>Up to 1 MB (300x300 px)</span>
